changes from code review

--- a/test/index.html
+++ b/test/index.html
@@ -1,7 +1,3 @@
-<!--
-To change this template, choose Tools | Templates
-and open the template in the editor.
--->
 <!DOCTYPE html>
 <html>
   <head>
@@ -28,15 +24,15 @@ and open the template in the editor.
     </div> <!-- end conversion div -->
     <div id="validation" style="display:none">Validation test
     </div> <!-- end validation div -->
-      <script src="config5.js"></script>
-        <script src="general5.js"></script>
-        <script src="dimension5.js"></script>
-        <script src="functions5.js"></script>
-        <script src="prefix5.js"></script>
-        <script src="unit5.js"></script>
-        <script src="unitsInput5.js"></script>
-        <script src="unitTables5.js"></script>
-        <script src="autocomplete-lhc-7.0.7/autocomplete-lhc_jQuery.min.js"></script>
+      <script src="../source/config.js"></script>
+      <script src="general5.js"></script>
+      <script src="../source/dimension.js"></script>
+      <script src="../source/functions.js"></script>
+      <script src="../source/prefix.js"></script>
+      <script src="../source/unit.js"></script>
+      <script src="../source/unitsInput.js"></script>
+      <script src="../source/unitTables.js"></script>
+      <script src="autocomplete-lhc-7.0.7/autocomplete-lhc_jQuery.min.js"></script>
     <script>
       Ucum.init();
       var opts = {'matchListValue': true} ;
