changes from code review

--- a/test/index.html
+++ b/test/index.html
@@ -24,14 +24,14 @@
     </div> <!-- end conversion div -->
     <div id="validation" style="display:none">Validation test
     </div> <!-- end validation div -->
-      <script src="../source/config.js"></script>
+      <script src="../dist/es5/config.js"></script>
       <script src="general5.js"></script>
-      <script src="../source/dimension.js"></script>
-      <script src="../source/functions.js"></script>
-      <script src="../source/prefix.js"></script>
-      <script src="../source/unit.js"></script>
-      <script src="../source/unitsInput.js"></script>
-      <script src="../source/unitTables.js"></script>
+      <script src="../dist/es5/dimension.js"></script>
+      <script src="../dist/es5/functions.js"></script>
+      <script src="../dist/es5/prefix.js"></script>
+      <script src="../dist/es5/unit.js"></script>
+      <script src="../dist/es5/unitsInput.js"></script>
+      <script src="../dist/es5/unitTables.js"></script>
       <script src="autocomplete-lhc-7.0.7/autocomplete-lhc_jQuery.min.js"></script>
     <script>
       Ucum.init();
