--- a/test/index2.html
+++ b/test/index2.html
@@ -17,36 +17,14 @@
       </p>
       <p>Select the unit that it is to be converted to:
         <input type="text" id="convertTo">
-        <button id="doConversionButton" onclick="zzz.UcumLhcUtils.getInstance().convertUnit()"
+        <button id="doConversionButton" onclick="ucumPkg.UcumLhcUtils.getInstance().convertUnit()"
                 type="button">Convert</button>
       </p>
       <p id="resultString">resultString</p>
     </div> <!-- end conversion div -->
     <div id="validation" style="display:none">Validation test
     </div> <!-- end validation div -->
-    <!--
-      <script src="../dist/es5/config.js"></body>
-      <script src="../dist/es5/ucumLhcUtils.js"></script>
-      <script src="general5.js"></script>
-      <script src="../dist/es5/dimension.js"></script>
-      <script src="../dist/es5/functions.js"></script>
-      <script src="../dist/es5/prefix.js"></script>
-      <script src="../dist/es5/unit.js"></script>
-      <script src="../dist/es5/unitsInput.js"></script>
-      <script src="../dist/es5/unitTables.js"></script>
-      -->
-      <script src="../autocomplete-lhc-7.0.7/autocomplete-lhc_jQuery.min.js"></script>
-
-    <!--<script src="../dist/module.js"></script>-->
-      <!--<script>
-      //startup();
-      //var utils = UcumLhcUtils.getInstance();
-      //var utab = UnitTables.getInstance();
-      //var unames = utab.getUnitNamesList();
-      //var opts = {'matchListValue': true} ;
-      //new Def.Autocompleter.Prefetch('convertFrom', unames, opts) ;
-      //new Def.Autocompleter.Prefetch('convertTo', unames, opts); -->
-   <script src="../dist/module.js"></script>
-   <!-- <script src="../dist/es5/ucumLhcUtils.js"></script> -->
+    <script src="../autocomplete-lhc-7.0.7/autocomplete-lhc_jQuery.min.js"></script>
+    <script src="../dist/module.js"></script>
   </body>
 </html>
