--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>LHC UCUM Demo</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link href="ucumDemo.css" rel="stylesheet"/>
+    <link href="stylesheets/ucumDemo.css" rel="stylesheet"/>
     <link href="../autocomplete-lhc-7.0.7/autocomplete-lhc_jQueryUI.min.css"
           media="screen" rel="stylesheet" />
   </head>
