--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- page header -->
     <div id="header">
       <a href="http://lhncbc.nlm.nih.gov" title="Home" rel="home" id="logo">
-        <img src="../dist/assets/images/lhncbc.jpg" alt="Home" />
+        <img src="dist/assets/images/lhncbc.jpg" alt="Home" />
       </a>
       <div id="siteNameBox">
         <a href="/"><span id=siteName>LHC UCUM Demo</span><br>
@@ -67,7 +67,7 @@
       <li><a title="NIH Freedom of Information Act office"  href="http://www.nih.gov/icd/od/foia/index.htm"
           >Freedom of Information Act</a></li>
       <li class="last-item"><a title="USA.gov" href="http://www.usa.gov/"><img
-          src="../dist/assets/images/USAgov.gif" alt="USA.gov" id="usagov"></a></li>
+          src="dist/assets/images/USAgov.gif" alt="USA.gov" id="usagov"></a></li>
     </ul>
     <ul class="horz-list">
       <li><a title="U.S. National Library of Medicine" href="http://www.nlm.nih.gov/"
@@ -80,6 +80,6 @@
   </div>
   <!-- end page footer -->
     <script src="../autocomplete-lhc-7.0.7/autocomplete-lhc_jQuery.min.js"></script>
-    <script src="../dist/module.js"></script>
+    <script src="dist/module.js"></script>
   </body>
 </html>
