update autocompleter links

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>LHC UCUM Demo</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link href="stylesheets/ucumDemo.css" rel="stylesheet"/>
-    <link href="autocomplete-lhc-8.1.0/autocomplete-lhc_jQueryUI.min.css"
+    <link href="https://lforms-service.nlm.nih.gov/autocomplete-lhc-versions/8.1.0/autocomplete-lhc_jQueryUI.min.css"
           media="screen" rel="stylesheet" />
   </head>
   <body>
@@ -79,7 +79,7 @@
     </ul>
   </div>
   <!-- end page footer -->
-    <script src="autocomplete-lhc-8.1.0/autocomplete-lhc_jQuery.min.js"></script>
+    <script src="https://lforms-service.nlm.nih.gov/autocomplete-lhc-versions/8.1.0/autocomplete-lhc_jQuery.min.js"></script>
     <script src="dist/module.js"></script>
   </body>
 </html>
