change title, per Clem

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
         <img src="dist/assets/images/lhncbc.jpg" alt="Home" />
       </a>
       <div id="siteNameBox">
-        <a href="/"><span id=siteName>LHC UCUM Demo</span><br>
+        <a href="/"><span id=siteName>LHC Units of Measure (UCUM) Validator and Converter</span><br>
           <span id=tagline>A demonstration site for the LHC UCUM service</span></a>
       </div>
     </div>
     <!-- end page header -->
-    <h1>LHC UCUM Demo</h1>
+    <h1>LHC UCUM validator and converter</h1>
 
     <div id="conversion" class="section">
       <h2>UCUM Unit Conversions</h2>
