changes from 4/27 mtg

--- a/index.html
+++ b/index.html
@@ -3,28 +3,28 @@
   <head>
     <title>LHC UCUM Demo</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link href="stylesheets/ucumDemo.css" rel="stylesheet"/>
-    <link href="https://lforms-service.nlm.nih.gov/autocomplete-lhc-versions/8.1.0/autocomplete-lhc_jQueryUI.min.css"
+    <link href="ucumDemo.css" rel="stylesheet"/>
+    <link href="../autocomplete-lhc-7.0.7/autocomplete-lhc_jQueryUI.min.css"
           media="screen" rel="stylesheet" />
   </head>
   <body>
     <!-- page header -->
     <div id="header">
       <a href="http://lhncbc.nlm.nih.gov" title="Home" rel="home" id="logo">
-        <img src="dist/assets/images/lhncbc.jpg" alt="Home" />
+        <img src="../dist/assets/images/lhncbc.jpg" alt="Home" />
       </a>
       <div id="siteNameBox">
-        <a href="/"><span id=siteName>LHC Units of Measure (UCUM) Validator and Converter</span><br>
+        <a href="/"><span id=siteName>LHC UCUM Demo</span><br>
           <span id=tagline>A demonstration site for the LHC UCUM service</span></a>
       </div>
     </div>
     <!-- end page header -->
-    <h1>LHC UCUM validator and converter</h1>
+    <h1>LHC UCUM Demo</h1>
 
     <div id="conversion" class="section">
       <h2>UCUM Unit Conversions</h2>
       <h4>Convert values from one UCUM unit to another</h4>
-      <p>Enter or select the unit you want to convert:
+      <p>Enter a valid UCUM code for the unit you want to convert:
         <input type="text" id="convertFrom"
          onblur="ucumPkg.UcumLhcUtils.getInstance().getCommensurables('convertFrom',
                                                                       'convertTo',
@@ -33,7 +33,7 @@
       <p>What is the value you want to convert?
         <input type="text" id="convertNum">
       </p>
-      <p>Select the unit that it is to be converted to:
+      <p>Enter or Select the unit that it is to be converted to:
       <input type="text" id="convertTo">
       <p>&nbsp;&nbsp;  <button id="doConversionButton"
          onclick="ucumPkg.UcumLhcUtils.getInstance().convertUnit('convertFrom',
@@ -43,6 +43,13 @@
       </p>
       <p id="resultString">&nbsp;&nbsp;</p>
     </div> <!-- end conversion div -->
+    <div id="ucumList" class="section">
+      <h4>Valid UCUM Unit Codes</h4>
+      <p>Type part of the name or code to narrow down the list:
+        <input type="text" id="unitsList">
+      </p>
+      <p class="small-print">List shows UCUM codes followed by the name of the unit</p>
+    </div> <!-- end ucumList div -->
     <div id="validation" class="section">
       <h2>UCUM Unit Expression Validation</h2>
       <p>Enter a unit string to be validated:
@@ -67,7 +74,7 @@
       <li><a title="NIH Freedom of Information Act office"  href="http://www.nih.gov/icd/od/foia/index.htm"
           >Freedom of Information Act</a></li>
       <li class="last-item"><a title="USA.gov" href="http://www.usa.gov/"><img
-          src="dist/assets/images/USAgov.gif" alt="USA.gov" id="usagov"></a></li>
+          src="../dist/assets/images/USAgov.gif" alt="USA.gov" id="usagov"></a></li>
     </ul>
     <ul class="horz-list">
       <li><a title="U.S. National Library of Medicine" href="http://www.nlm.nih.gov/"
@@ -79,7 +86,7 @@
     </ul>
   </div>
   <!-- end page footer -->
-    <script src="https://lforms-service.nlm.nih.gov/autocomplete-lhc-versions/8.1.0/autocomplete-lhc_jQuery.min.js"></script>
-    <script src="dist/module.js"></script>
+    <script src="../autocomplete-lhc-7.0.7/autocomplete-lhc_jQuery.min.js"></script>
+    <script src="../dist/module.js"></script>
   </body>
 </html>
