fix links for github version

--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
   <head>
     <title>LHC UCUM Demo</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link href="ucumDemo.css" rel="stylesheet"/>
-    <link href="../autocomplete-lhc-7.0.7/autocomplete-lhc_jQueryUI.min.css"
+    <link href="stylesheets/ucumDemo.css" rel="stylesheet"/>
+    <link href="https://lforms-service.nlm.nih.gov/autocomplete-lhc-versions/8.1.0/autocomplete-lhc_jQueryUI.min.css"
           media="screen" rel="stylesheet" />
   </head>
   <body>
     <!-- page header -->
     <div id="header">
       <a href="http://lhncbc.nlm.nih.gov" title="Home" rel="home" id="logo">
-        <img src="../dist/assets/images/lhncbc.jpg" alt="Home" />
+        <img src="dist/assets/images/lhncbc.jpg" alt="Home" />
       </a>
       <div id="siteNameBox">
         <a href="/"><span id=siteName>LHC UCUM Demo</span><br>
@@ -86,7 +86,7 @@
     </ul>
   </div>
   <!-- end page footer -->
-    <script src="../autocomplete-lhc-7.0.7/autocomplete-lhc_jQuery.min.js"></script>
-    <script src="../dist/module.js"></script>
+    <script src="https://lforms-service.nlm.nih.gov/autocomplete-lhc-versions/8.1.0/autocomplete-lhc_jQuery.min.js"></script>
+    <script src="dist/module.js"></script>
   </body>
 </html>
