--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <li><a title="NIH Freedom of Information Act office"  href="http://www.nih.gov/icd/od/foia/index.htm"
           >Freedom of Information Act</a></li>
       <li class="last-item"><a title="USA.gov" href="http://www.usa.gov/"><img
-          src="../dist/assets/images/USAgov.gif" alt="USA.gov" id="usagov"></a></li>
+          src="dist/assets/images/USAgov.gif" alt="USA.gov" id="usagov"></a></li>
     </ul>
     <ul class="horz-list">
       <li><a title="U.S. National Library of Medicine" href="http://www.nlm.nih.gov/"
