--- a/test/ucumDemo.html
+++ b/test/ucumDemo.html
@@ -3,7 +3,7 @@
   <head>
     <title>LHC UCUM Demo</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link href="stylesheets/ucumDemo.css" rel="stylesheet"/>
+    <link href="ucumDemo.css" rel="stylesheet"/>
     <link href="../autocomplete-lhc-7.0.7/autocomplete-lhc_jQueryUI.min.css"
           media="screen" rel="stylesheet" />
   </head>
@@ -11,20 +11,20 @@
     <!-- page header -->
     <div id="header">
       <a href="http://lhncbc.nlm.nih.gov" title="Home" rel="home" id="logo">
-        <img src="dist/assets/images/lhncbc.jpg" alt="Home" />
+        <img src="../dist/assets/images/lhncbc.jpg" alt="Home" />
       </a>
       <div id="siteNameBox">
-        <a href="/"><span id=siteName>LHC UCUM Demo</span><br>
+        <a href="/"><span id=siteName>Units of Measure (UCUM) Validator and Converter</span><br>
           <span id=tagline>A demonstration site for the LHC UCUM service</span></a>
       </div>
     </div>
     <!-- end page header -->
-    <h1>LHC UCUM Demo</h1>
+    <h1>LHC UCUM Validator and Converter</h1>
 
     <div id="conversion" class="section">
       <h2>UCUM Unit Conversions</h2>
       <h4>Convert values from one UCUM unit to another</h4>
-      <p>Enter or select the unit you want to convert:
+      <p>Enter a valid UCUM code for the unit you want to convert:
         <input type="text" id="convertFrom"
          onblur="ucumPkg.UcumLhcUtils.getInstance().getCommensurables('convertFrom',
                                                                       'convertTo',
@@ -33,7 +33,7 @@
       <p>What is the value you want to convert?
         <input type="text" id="convertNum">
       </p>
-      <p>Select the unit that it is to be converted to:
+      <p>Enter or Select the unit that it is to be converted to:
       <input type="text" id="convertTo">
       <p>&nbsp;&nbsp;  <button id="doConversionButton"
          onclick="ucumPkg.UcumLhcUtils.getInstance().convertUnit('convertFrom',
@@ -43,6 +43,13 @@
       </p>
       <p id="resultString">&nbsp;&nbsp;</p>
     </div> <!-- end conversion div -->
+    <div id="ucumList" class="section">
+      <h4>Valid UCUM Unit Codes</h4>
+      <p>Type part of the name or code to narrow down the list:
+        <input type="text" id="unitsList">
+      </p>
+      <p class="small-print">List shows UCUM codes followed by the name of the unit</p>
+    </div> <!-- end ucumList div -->
     <div id="validation" class="section">
       <h2>UCUM Unit Expression Validation</h2>
       <p>Enter a unit string to be validated:
