--- a/test/ucumDemo.html
+++ b/test/ucumDemo.html
@@ -21,6 +21,14 @@
     <!-- end page header -->
     <h1>LHC UCUM Validator and Converter</h1>
 
+    <div id="ucumList" class="section">
+      <h2>Find Common UCUM Unit Codes</h2>
+      <p>Find the correct spelling of a common UCUM code:
+        <input type="text" id="unitsList">
+      </p>
+      <p class="small-print">List shows UCUM codes followed by the name of the unit</p>
+    </div> <!-- end ucumList div -->
+
     <div id="conversion" class="section">
       <h2>UCUM Unit Conversions</h2>
       <h4>Convert values from one UCUM unit to another</h4>
@@ -29,6 +37,7 @@
          onblur="ucumPkg.UcumLhcUtils.getInstance().getCommensurables('convertFrom',
                                                                       'convertTo',
                                                                       'resultString')">
+        &nbsp;&nbsp;UCUM codes are <b>case-sensitive</b>
       </p>
       <p>What is the value you want to convert?
         <input type="text" id="convertNum">
@@ -43,17 +52,17 @@
       </p>
       <p id="resultString">&nbsp;&nbsp;</p>
     </div> <!-- end conversion div -->
-    <div id="ucumList" class="section">
-      <h4>Valid UCUM Unit Codes</h4>
-      <p>Type part of the name or code to narrow down the list:
-        <input type="text" id="unitsList">
-      </p>
-      <p class="small-print">List shows UCUM codes followed by the name of the unit</p>
-    </div> <!-- end ucumList div -->
+
     <div id="validation" class="section">
       <h2>UCUM Unit Expression Validation</h2>
       <p>Enter a unit string to be validated:
-        <input type="text" id="valString">
+        <input type="text" id="valString">&nbsp; &nbsp; &nbsp; &nbsp;
+        <button id="toggleHints"
+                onclick="
+                ucumPkg.UcumLhcUtils.getInstance().toggleDisplay('hints',
+                                                                 'toggleHints',
+                                                                 'Hide', 'Show')"
+        type="button">Show entry hints</button>
       </p>&nbsp;&nbsp;
       <button id="doValidationButton"
               onclick=
@@ -62,6 +71,35 @@
               type="button">Validate</button>
       <p id="validationString">&nbsp;&nbsp;</p>
       <p id="validList"></p>
+      <div id="hints" style="display: none">
+      <h4 class="small-print" style="text-align: left">Unit String creation hints</h4>
+       <p class="small-print">See the <a href="http://unitsofmeasure.org/ucum.html">
+       UCUM Specification</a> for full descriptions of grammar and syntax rules.
+      <ul class="small-print">
+        <li>A <a href="http://unitsofmeasure.org/ucum.html#section-Prefixes">UCUM
+          defined prefix</a> can be applied to metric units, e.g. kg for
+          kilo gram (where k is the prefix and g is the base unit).</li>
+        <li>Simple units may be <a href="http://unitsofmeasure.org/ucum.html#para-9">
+          raised to a power</a> by appending an integer number to the end of the
+          unit term.  Negative exponents must be preceded by a minus sing ('-').  Positive exponents may be
+          preceded by a plus sign ('+') although the sign may be omitted.</li>
+        <li>All units can be combined in an <a href="http://unitsofmeasure.org/ucum.html#para-7">
+          algebraic term</a> using the operators for multiplication (period '.') and division (solidus '/').</li>
+        <li>No blanks are allowed within the unit string.</li>
+        <li>The multiplication operator must be explicity specified; it is never
+          assumed.</li>
+        <li>The multiplication operator must appear between two unit terms.</li>
+        <li>The division operator may appear at the beginning of the string,
+           indicating inversion of the following term, but normally appears
+           between two terms.</li>
+        <li>Terms are evaluated from left to right, with multiplication and
+           division having the same precedence.</li>
+        <li><a href="http://unitsofmeasure.org/ucum.html#para-10">Parentheses</a>
+          may be used to override normal left-to-right evaluation
+          of a string.  For example kg.m/s2 multiplies kg by m and dvides the
+          product by s2.   kg.(m/s2) divides m by s2 and multiples that by kg.</li>
+      </ul>
+      </div></p>
     </div> <!-- end validation div -->
 
   <!-- page footer -->
