--- a/demo/index.html
+++ b/demo/index.html
@@ -3,15 +3,15 @@
   <head>
     <title>LHC UCUM Demo</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link href="ucumDemo.css" rel="stylesheet"/>
-    <link href="../autocomplete-lhc-7.0.7/autocomplete-lhc_jQueryUI.min.css"
+    <link href="stylesheets/ucumDemo.css" rel="stylesheet"/>
+    <link href="https://lforms-service.nlm.nih.gov/autocomplete-lhc-versions/8.1.0/autocomplete-lhc_jQueryUI.min.css"
           media="screen" rel="stylesheet" />
   </head>
   <body>
     <!-- page header -->
     <div id="header">
       <a href="http://lhncbc.nlm.nih.gov" title="Home" rel="home" id="logo">
-        <img src="../dist/assets/images/lhncbc.jpg" alt="Home" />
+        <img src="assets/images/lhncbc.jpg" alt="Home" />
       </a>
       <div id="siteNameBox">
         <a href="/"><span id=siteName>Units of Measure (UCUM) Validator and Converter</span><br>
@@ -34,9 +34,9 @@
       <h4>Convert values from one UCUM unit to another</h4>
       <p>Enter a valid UCUM code for the unit you want to convert:
         <input type="text" id="convertFrom"
-         onblur="ucumPkg.UcumLhcUtils.getInstance().getCommensurables('convertFrom',
-                                                                      'convertTo',
-                                                                      'resultString')">
+         onblur="ucumPkg.UcumDemo.getInstance().getCommensurables('convertFrom',
+                                                                  'convertTo',
+                                                                  'resultString')">
         &nbsp;&nbsp;UCUM codes are <b>case-sensitive</b>
       </p>
       <p>What is the value you want to convert?
@@ -45,9 +45,9 @@
       <p>Enter or Select the unit that it is to be converted to:
       <input type="text" id="convertTo">
       <p>&nbsp;&nbsp;  <button id="doConversionButton"
-         onclick="ucumPkg.UcumLhcUtils.getInstance().convertUnit('convertFrom',
-                                                                 'convertNum',
-                                                                 'convertTo')"
+         onclick="ucumPkg.UcumDemo.getInstance().convertUnit('convertFrom',
+                                                             'convertNum',
+                                                             'convertTo')"
                 type="button">Convert</button>
       </p>
       <p id="resultString">&nbsp;&nbsp;</p>
@@ -66,8 +66,8 @@
       </p>&nbsp;&nbsp;
       <button id="doValidationButton"
               onclick=
-                  "ucumPkg.UcumLhcUtils.getInstance().reportUnitStringValidity('valString',
-                                                            'validationString', 'validList')"
+                  "ucumPkg.UcumDemo.getInstance().reportUnitStringValidity('valString',
+                                                                   'validationString')"
               type="button">Validate</button>
       <p id="validationString">&nbsp;&nbsp;</p>
       <p id="validList"></p>
@@ -112,7 +112,7 @@
       <li><a title="NIH Freedom of Information Act office"  href="http://www.nih.gov/icd/od/foia/index.htm"
           >Freedom of Information Act</a></li>
       <li class="last-item"><a title="USA.gov" href="http://www.usa.gov/"><img
-          src="../dist/assets/images/USAgov.gif" alt="USA.gov" id="usagov"></a></li>
+          src="assets/images/USAgov.gif" alt="USA.gov" id="usagov"></a></li>
     </ul>
     <ul class="horz-list">
       <li><a title="U.S. National Library of Medicine" href="http://www.nlm.nih.gov/"
@@ -124,7 +124,7 @@
     </ul>
   </div>
   <!-- end page footer -->
-    <script src="../autocomplete-lhc-7.0.7/autocomplete-lhc_jQuery.min.js"></script>
-    <script src="../dist/module.js"></script>
+    <script src="https://lforms-service.nlm.nih.gov/autocomplete-lhc-versions/8.1.0/autocomplete-lhc_jQuery.min.js"></script>
+    <script src="./module.js"></script>
   </body>
 </html>
