changes from review comments

--- a/test/ucumDemo.html
+++ b/test/ucumDemo.html
@@ -4,7 +4,7 @@
     <title>LHC UCUM Demo</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link href="ucumDemo.css" rel="stylesheet"/>
-    <link href="../autocomplete-lhc-7.0.7/autocomplete-lhc_jQueryUI.min.css"
+    <link href="https://lforms-service.nlm.nih.gov//autocomplete-lhc-versions/8.1.0/autocomplete-lhc_jQueryUI.min.css"
           media="screen" rel="stylesheet" />
   </head>
   <body>
@@ -96,8 +96,8 @@
            division having the same precedence.</li>
         <li><a href="http://unitsofmeasure.org/ucum.html#para-10">Parentheses</a>
           may be used to override normal left-to-right evaluation
-          of a string.  For example kg.m/s2 multiplies kg by m and dvides the
-          product by s2.   kg.(m/s2) divides m by s2 and multiples that by kg.</li>
+          of a string.  For example kg.m/s2 multiplies kg by m and divides the
+          product by s2.   kg.(m/s2) divides m by s2 and multiplies that by kg.</li>
       </ul>
       </div></p>
     </div> <!-- end validation div -->
@@ -124,7 +124,7 @@
     </ul>
   </div>
   <!-- end page footer -->
-    <script src="../autocomplete-lhc-7.0.7/autocomplete-lhc_jQuery.min.js"></script>
+    <script src="https://lforms-service.nlm.nih.gov/autocomplete-lhc-versions/8.1.0/autocomplete-lhc_jQuery.min.js"></script>
     <script src="../dist/module.js"></script>
   </body>
 </html>
