--- a/test/ucumDemo.html
+++ b/test/ucumDemo.html
@@ -96,8 +96,8 @@
            division having the same precedence.</li>
         <li><a href="http://unitsofmeasure.org/ucum.html#para-10">Parentheses</a>
           may be used to override normal left-to-right evaluation
-          of a string.  For example kg.m/s2 multiplies kg by m and divides the
-          product by s2.   kg.(m/s2) divides m by s2 and multiplies that by kg.</li>
+          of a string.  For example kg/m*s2 divides kg by m and multiplies the
+          result by s2.   kg/(m*s2) multiplies m by s2 and divides that by kg.</li>
       </ul>
       </div></p>
     </div> <!-- end validation div -->
