--- a/test/ucumDemo.html
+++ b/test/ucumDemo.html
@@ -88,16 +88,16 @@
         <li>No blanks are allowed within the unit string.</li>
         <li>The multiplication operator must be explicity specified; it is never
           assumed.</li>
-        <li>The multiplication operator must appear between two unit terms.</li>
-        <li>The division operator may appear at the beginning of the string,
+        <li>The multiplication operator (.) must appear between two unit terms.</li>
+        <li>The division operator (/) may appear at the beginning of the string,
            indicating inversion of the following term, but normally appears
            between two terms.</li>
         <li>Terms are evaluated from left to right, with multiplication and
            division having the same precedence.</li>
         <li><a href="http://unitsofmeasure.org/ucum.html#para-10">Parentheses</a>
           may be used to override normal left-to-right evaluation
-          of a string.  For example kg/m*s2 divides kg by m and multiplies the
-          result by s2.   kg/(m*s2) multiplies m by s2 and divides that by kg.</li>
+          of a string.  For example kg/m.s2 divides kg by m and multiplies the
+          result by s2.   kg/(m.s2) multiplies m by s2 and divides that by kg.</li>
       </ul>
       </div></p>
     </div> <!-- end validation div -->
