cahnges ot make demo page work with file structure changes

--- a/demo/index.html
+++ b/demo/index.html
@@ -59,7 +59,7 @@
         <input type="text" id="valString">&nbsp; &nbsp; &nbsp; &nbsp;
         <button id="toggleHints"
                 onclick="
-                ucumPkg.UcumLhcUtils.getInstance().toggleDisplay('hints',
+                ucumPkg.UcumDemo.getInstance().toggleDisplay('hints',
                                                                  'toggleHints',
                                                                  'Hide', 'Show')"
         type="button">Show entry hints</button>
