updates for missing close paren and to gruntfile

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <button id="doValidationButton"
               onclick=
                   "ucumPkg.UcumDemo.getInstance().reportUnitStringValidity('valString',
-                                                            'validationString', 'validList')"
+                                                            'validationString')"
               type="button">Validate</button>
       <p id="validationString">&nbsp;&nbsp;</p>
       <p id="validList"></p>
