fixes for demo setup

--- a/index.html
+++ b/index.html
@@ -125,6 +125,6 @@
   </div>
   <!-- end page footer -->
     <script src="https://lforms-service.nlm.nih.gov/autocomplete-lhc-versions/8.1.0/autocomplete-lhc_jQuery.min.js"></script>
-    <script src="dist/module.js"></script>
+    <script src="demo/module.js"></script>
   </body>
 </html>
