--- a/demo/index.html
+++ b/demo/index.html
@@ -99,7 +99,12 @@
           of a string.  For example kg/m.s2 divides kg by m and multiplies the
           result by s2.   kg/(m.s2) multiplies m by s2 and divides that by kg.</li>
       </ul>
-      </div></p>
+      </div><!-- hints div -->
+      <div id="filevalidation">
+        <p>Validate unit strings in a file</p>
+        <input type="file" id="inputfile"
+               onchange="ucumPkg.UcumDemo.getInstance().fileSelected()">
+      </div><!-- filevalidation div -->
     </div> <!-- end validation div -->
 
   <!-- page footer -->
