file validation code -- not complete yet, still need to add field for user to specify column for the unit string.  Includes code to create units list for Shennon.

--- a/demo/index.html
+++ b/demo/index.html
@@ -104,6 +104,7 @@
         <p>Validate unit strings in a file</p>
         <input type="file" id="inputfile"
                onchange="ucumPkg.UcumDemo.getInstance().fileSelected()">
+        <!-- <a id="downlink" href="" style="'display:none'"></a> -->
       </div><!-- filevalidation div -->
     </div> <!-- end validation div -->
 
