--- a/demo/index.html
+++ b/demo/index.html
@@ -104,6 +104,14 @@
         <p>Validate unit strings in a file</p>
         <input type="file" id="inputfile"
                onchange="ucumPkg.UcumDemo.getInstance().fileSelected()">
+        <div id="colNameDiv" style="display:none">
+            Name of the column that contains the strings to be validated
+            <input type="text" id="colName" disabled="true">&nbsp; &nbsp;
+            <button id="startValidation"
+                  onclick="
+                ucumPkg.UcumDemo.getInstance().columnSpecified()"
+                  type="button">Validate File</button>
+        </div><!-- colNameDiv -->
         <!-- <a id="downlink" href="" style="'display:none'"></a> -->
       </div><!-- filevalidation div -->
     </div> <!-- end validation div -->
@@ -128,7 +136,7 @@
       <li class="last-item"><a title="U.S. Department of Health and Human Services"  href="http://www.hhs.gov/"
           >U.S. Department of Health and Human Services</a></li>
     </ul>
-  </div>
+  </div><!-- fine-print -->
   <!-- end page footer -->
     <script src="https://lforms-service.nlm.nih.gov/autocomplete-lhc-versions/8.1.0/autocomplete-lhc_jQuery.min.js"></script>
     <script src="./module.js"></script>
