added comments to indicate where differs in gh-pages version; correct return parameter comments

--- a/demo/index.html
+++ b/demo/index.html
@@ -11,6 +11,7 @@
     <!-- page header -->
     <div id="header">
       <a href="http://lhncbc.nlm.nih.gov" title="Home" rel="home" id="logo">
+        <!-- add dist/ to img path for demo version -->
         <img src="assets/images/lhncbc.jpg" alt="Home" />
       </a>
       <div id="siteNameBox">
@@ -125,6 +126,7 @@
       <li><a title="NLM viewers and players" href="http://www.nlm.nih.gov/plugins.html">Viewers & Players</a></li>
       <li><a title="NIH Freedom of Information Act office"  href="http://www.nih.gov/icd/od/foia/index.htm"
           >Freedom of Information Act</a></li>
+      <!-- add dist/ to img path for demo version -->
       <li class="last-item"><a title="USA.gov" href="http://www.usa.gov/"><img
           src="assets/images/USAgov.gif" alt="USA.gov" id="usagov"></a></li>
     </ul>
@@ -139,6 +141,7 @@
   </div><!-- fine-print -->
   <!-- end page footer -->
     <script src="https://lforms-service.nlm.nih.gov/autocomplete-lhc-versions/8.1.0/autocomplete-lhc_jQuery.min.js"></script>
+    <!-- add demo/ to module.js path for demo version -->
     <script src="./module.js"></script>
   </body>
 </html>
