--- a/index.html
+++ b/index.html
@@ -106,12 +106,16 @@
         <input type="file" id="inputfile"
                onchange="ucumPkg.UcumDemo.getInstance().fileSelected()">
         <div id="colNameDiv" style="display:none">
-            Name of the column that contains the strings to be validated
-            <input type="text" id="colName" disabled="true">&nbsp; &nbsp;
-            <button id="startValidation"
+          Name of the column that contains the strings to be validated
+          <input type="text" id="colName">&nbsp; &nbsp;
+          <button id="startValidation"
                   onclick="
                 ucumPkg.UcumDemo.getInstance().columnSpecified()"
                   type="button">Validate File</button>
+          <button id="cancelValidation"
+                  onclick="
+                ucumPkg.UcumDemo.getInstance().resetFileInput()"
+                  type="button">Cancel</button>
         </div><!-- colNameDiv -->
         <!-- <a id="downlink" href="" style="'display:none'"></a> -->
       </div><!-- filevalidation div -->
