fix location of stylesheets

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>LHC UCUM Demo</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link href="dist/stylesheets/ucumDemo.css" rel="stylesheet"/>
+    <link href="stylesheets/ucumDemo.css" rel="stylesheet"/>
     <link href="https://lforms-service.nlm.nih.gov/autocomplete-lhc-versions/8.1.0/autocomplete-lhc_jQueryUI.min.css"
           media="screen" rel="stylesheet" />
   </head>
