updated license and readme, renamed module.js files, undate bower.json

--- a/index.html
+++ b/index.html
@@ -162,6 +162,6 @@
   </div><!-- fine-print -->
   <!-- end page footer -->
     <script src="https://lforms-service.nlm.nih.gov/autocomplete-lhc-versions/8.1.0/autocomplete-lhc_jQuery.min.js"></script>
-    <script src="demo/module.js"></script>
+    <script src="demo/ucum-demo.js"></script>
   </body>
 </html>
