--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link href="stylesheets/ucumDemo.css" rel="stylesheet"/>
     <link href="https://lforms-service.nlm.nih.gov/autocomplete-lhc-versions/8.1.0/autocomplete-lhc_jQueryUI.min.css"
-          media="screen" rel="stylesheet" />
+          rel="stylesheet" />
   </head>
   <body>
     <!-- page header -->
