changes from stash

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div id="ucumList" class="section">
       <h2>Find Common UCUM Unit Codes</h2>
       <p>Find the correct spelling of a common UCUM code:
-        <input type="text" id="unitsList">
+        <input type="text" id="unitsList" placeholder="begin typing ...">
       </p>
       <p class="small-print">List shows UCUM codes followed by the name of the unit</p>
     </div> <!-- end ucumList div -->
