one more stash change

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <h2>UCUM Unit Conversions</h2>
       <h4>Convert values from one UCUM unit to another</h4>
       <p>Enter a valid UCUM code for the unit you want to convert:
-        <input type="text" id="convertFrom"
+        <input type="text" id="convertFrom" placeholder="begin typing ..."
          onblur="demoPkg.UcumDemo.getInstance().getCommensurables('convertFrom',
                                                                   'convertTo',
                                                                   'resultString')">
