--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <link href="demo-dist/stylesheets/ucumDemo.css" rel="stylesheet"/>
     <link rel="stylesheet" href="https://lforms-service.nlm.nih.gov/autocomplete-lhc-versions/9.1.1/autocomplete-lhc_jQueryUI.min.css" />
   </head>
-  <body>
+  <body onload="demoPkg.UcumDemo.getInstance().switchTabs(event,
+                                                          'validation')">
     <!-- page header -->
     <div id="header">
       <a href="http://lhncbc.nlm.nih.gov" title="Home" rel="home" id="logo">
@@ -20,15 +21,18 @@
     <!-- end page header -->
     <h1>LHC UCUM Validator and Converter</h1>
 
-    <div id="ucumList" class="section">
-      <h2>Find Common UCUM Unit Codes</h2>
-      <p>Find the correct spelling of a common UCUM code:
-        <input type="text" id="unitsList" placeholder="begin typing ...">
-      </p>
-      <p class="small-print">List shows UCUM codes followed by the name of the unit</p>
-    </div> <!-- end ucumList div -->
+    <ul class="tab section">
+      <li><a id="validation-link" href="#" class="tablinks"
+             onclick="demoPkg.UcumDemo.getInstance().switchTabs(event,
+                                                                'validation')">
+             Validator</a></li>
+      <li><a id="conversion-link" href="#" class="tablinks"
+             onclick="demoPkg.UcumDemo.getInstance().switchTabs(event,
+                                                                'conversion')">
+             Converter</a></li>
+    </ul>
 
-    <div id="conversion" class="section">
+    <div id="conversion" class="tabcontent">
       <h2>UCUM Unit Conversions</h2>
       <h4>Convert values from one UCUM unit to another</h4>
       <p>Enter a valid UCUM code for the unit you want to convert:
@@ -38,6 +42,20 @@
                                                                   'resultString')">
         &nbsp;&nbsp;UCUM codes are <b>case-sensitive</b>
       </p>
+      <!--
+      <button id="toggleAdvancedSearch"
+              onclick="
+                demoPkg.UcumDemo.getInstance().toggleDisplay('advancedSearch',
+                                                             'toggleAdvancedSearch',
+                                                             'Hide', 'Show')"
+              type="button">Show advanced search options</button>
+      <div id="advancedSearch" style="display: none">
+        When you enter two or more characters in the UCUM code field, a search
+        is performed on the UCUM Code, Name, and Synonyms data available from
+        the Clinical Table Search Service provided by NLM.  You may constrain the
+        search on other data values.
+
+      </div> <!-- advancedSearch division -->
       <p>What is the value you want to convert?
         <input type="text" id="convertNum">
       </p>
@@ -52,17 +70,17 @@
       <p id="resultString">&nbsp;&nbsp;</p>
     </div> <!-- end conversion div -->
 
-    <div id="validation" class="section">
+    <div id="validation" class="tabcontent">
       <h2>UCUM Unit Expression Validation</h2>
-      <div id="singleString">
-        <h3>Validate a single expression</h3>
+      <div id="singleString" class="section">
+        <h3>Validate unit expressions one at a time</h3>
         <p>Enter a unit expression to be validated:
           <input type="text" id="valString">&nbsp; &nbsp; &nbsp; &nbsp;
           <button id="toggleHints"
                   onclick="
                 demoPkg.UcumDemo.getInstance().toggleDisplay('hints',
-                                                                 'toggleHints',
-                                                                 'Hide', 'Show')"
+                                                             'toggleHints',
+                                                             'Hide', 'Show')"
                   type="button">Show entry hints</button>
         </p>&nbsp;&nbsp;
         <button id="doValidationButton"
@@ -102,8 +120,8 @@
           </ul>
         </div><!-- hints div -->
       </div><!-- singleString div -->
-      <div id="filevalidation">
-        <h3>Validate unit expressions in a CSV file</h3>
+      <div id="filevalidation" class="section">
+        <h3>Validate all unit expressions in a CSV file</h3>
         <p>We can validate unit expressions in a <b>c</b>omma <b>s</b>eparated
           <b>v</b>alues file on your system.<ul>
         <li>Use the browse button below to select the file.</li>
